--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             <h6 class="text-decoration-underline">Answer Box</h6>
             <div class="col-12 d-flex justify-content-around align-items-center">
               <span class="h1" id="correct"><i class="fa-solid fa-square-check fa-2xl" style="color: #00ff00;"></i></span>
-              <input title="Press enter to submit" type="text" class="form-control-sm text-center" id="number-input" />
+              <input title="Press enter to submit" type="text" class="form-control-sm text-center bg-danger-subtle" id="number-input" disabled/>
               <span class="h1" id="incorrect"><i class="fa-solid fa-square-xmark fa-2xl" style="color: #ff0000;"></i></span>
             </div>
           </div>
