added score system

--- a/index.html
+++ b/index.html
@@ -47,6 +47,12 @@
               <span class="h1" id="incorrect"><i class="fa-solid fa-square-xmark fa-2xl" style="color: #ff0000;"></i></span>
             </div>
           </div>
+          <div class="row">
+            <div class="col-12" id="scores">
+              <h4 class="fw-medium" id="score">Score: <span class="fw-bold">0</span></h4>
+              <h4 class="fw-medium" id="high-score">High Score: <span class="fw-bold">0</span></h4>
+            </div>
+          </div>
         </div>
         <!-- Change Math Operator -->
         <div class="col-12 mb-4 border bg-light-subtle" id="math-operators">
