can add or remove operators for equation to randomly choose from

--- a/index.html
+++ b/index.html
@@ -59,14 +59,14 @@
           <div class="row">
             <div class="col-12 text-center">
               <h6 class="text-decoration-underline">Change Operator</h6>
-              <input type="checkbox" name="" id="plus" class="form-check-input" />
-              <label for="plus" class="me-3">+</label>
-              <input type="checkbox" name="" id="minus" class="form-check-input" />
-              <label for="minus" class="me-3">-</label>
-              <input type="checkbox" name="" id="multiply" class="form-check-input" />
-              <label for="multiply" class="me-3">*</label>
-              <input type="checkbox" name="" id="divide" class="form-check-input" />
-              <label for="divide" class="me-3">/</label>
+              <input type="checkbox" name="" id="+" class="form-check-input" />
+              <label for="+" class="me-3">+</label>
+              <input type="checkbox" name="" id="-" class="form-check-input" />
+              <label for="-" class="me-3">-</label>
+              <input type="checkbox" name="" id="*" class="form-check-input" />
+              <label for="*" class="me-3">*</label>
+              <input type="checkbox" name="" id="/" class="form-check-input" />
+              <label for="/" class="me-3">/</label>
             </div>
           </div>
         </div>
