added high score system

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
         <div class="col-12 text-center border bg-light-subtle" id="number-control">
           <h6 class="text-decoration-underline mb-3">Number Limit</h6>
           <h4 class="display-6 fw-medium">10</h4>
-          <input type="range" name="" id="limit-input" class="form-control-lg" />
+          <input type="range" min="10" max="50" step="5" id="limit-input" class="form-control-lg" />
         </div>
       </div>
       <!-- Play Button -->
